--- a/rate.html
+++ b/rate.html
@@ -231,6 +231,7 @@
                                 <option>Власник карти/рахунку/скриньки</option>
                                 <option>Мерчант</option>
                                 <option>Одержувач</option>
+                                <option>Платник (будь-який клієнт)</option>
                                 <option>Платник - клієнт банка</option>
                                 <option>Платник - неідентифікований клієнт</option>
                                 <option>Пенсіонер</option>
@@ -247,6 +248,7 @@
                             <select class="drop-list">
                                 <option>Рахунок у ПриватБанку</option>
                                 <option>Рахунок у сторонньому банку</option>
+                                <option>Рахунок у будь-якому банку</option>
                             </select>
                         </div>
                     </div>
