--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <thead>
           <tr>
             <th width="10px">№</th>
+            <th>Опис тарифу</th>
             <th>Назва продукту</th>
             <th>Назва послуги</th>
-            <th>Опис тарифу</th>
             <th>Платник комісії</th>
             <th>База нарахування комісії</th>
             <th>Тип комісії</th>
@@ -83,11 +83,11 @@
           <tr>
             <td>1</td>
             <td>
-              <a href="" class="prodact-link">Картка для Виплат/Картка для Виплат GOLD</a>
+              <a href="" class="prodact-link">Комісія за поповнення Картки для виплат з індивідуальним дизайном безготівковим платежем від третіх осіб без її
+              наявності</a>
             </td>
+            <td>Картка для Виплат/Картка для Виплат GOLD</td>
             <td>Картки для виплат з індивідуальним дизайном</td>
-            <td>Комісія за поповнення Картки для виплат з індивідуальним дизайном безготівковим платежем від третіх осіб без її
-            наявності</td>
             <td>Власник карти/рахунку/скриньки</td>
             <td>За транзакцію/платіж</td>
             <td>Відсоток від суми</td>
@@ -100,10 +100,10 @@
           <tr>
             <td>2</td>
             <td>
-              <a href="" class="prodact-link">Преміальні картки</a>
+              <a href="" class="prodact-link">Комісія за розрахункове обслуговування неактивного рахунку по продукту</a>
             </td>
+            <td>Преміальні картки</td>
             <td>Platinum</td>
-            <td>Комісія за розрахункове обслуговування неактивного рахунку по продукту</td>
             <td>Власник карти/рахунку/скриньки</td>
             <td>За рахунок/карту/довідку</td>
             <td>Фіксована значення</td>
@@ -116,10 +116,10 @@
           <tr>
             <td>3</td>
             <td>
-              <a href="" class="prodact-link">Термінові грошові перекази</a>
+              <a href="" class="prodact-link">Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку з гривневих карток</a>
             </td>
-            <td>Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку</td>
-            <td>Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку з гривневих карток</td>
+            <td>Термінові грошові перекази</td>
+            <td>Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку</td>           
             <td>Платник</td>
             <td>Сума переказу</td>
             <td>Відсоток від суми</td>
