--- a/rate.html
+++ b/rate.html
@@ -198,6 +198,18 @@
                     </div>
 
                     <div class="form-field">
+                        <label class="form-label-title" for="name"><span class="note">*</span>Категорія клієнта</label>
+                        <div class="box-textarea">
+                            <select class="drop-list">
+                                <option>Оберіть з переліку</option>
+                                <option>Фіз особа</option>
+                                <option>Юр особа</option>
+                                <option>ФОП</option>
+                            </select>
+                        </div>
+                    </div>
+                    
+                    <div class="form-field">
                         <label class="form-label-title" for="name"><span class="note">*</span>Платник комісії</label>
                         <div class="box-textarea">
                             <select class="drop-list">
@@ -932,6 +944,17 @@
                         <label class="form-label-title" for="name"><span class="note">*</span>Дата затвердження КО</label>
                         <div class="box-textarea">
                             <input class="calendar" type="date" name="calendar">
+                        </div>
+                    </div>
+
+                    <div class="form-field">
+                        <label class="form-label-title" for="name">Комісія з урахуванням ПДВ</label>
+                        <div class="box-textarea">
+                            <select class="drop-list">
+                                <option>Оберіть з переліку</option>
+                                <option>Так</option>
+                                <option>Ні</option>
+                            </select>
                         </div>
                     </div>
 
