--- a/rate.html
+++ b/rate.html
@@ -111,15 +111,14 @@
                         </div>
                     </div>
 
+
                     <div class="form-field">
                         <label class="form-label-title" for="name"><span class="note">*</span>Інформаційна система</label>
-                        <div class="x-textarea-last">
+                        <div class="box-textarea-last">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Інформаційна система, в котрій реалізовано тариф (система з ПК Геном)"></textarea>
                         </div>
                     </div>
-
-
                 </div>
             
 
