--- a/rate.html
+++ b/rate.html
@@ -825,7 +825,7 @@
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
                                 <option>Відсоток від суми</option>
-                                <option>ЗФіксована значення</option>
+                                <option>Фіксована значення</option>
                             </select>
                         </div>
                     </div>
@@ -875,7 +875,7 @@
                             <select class="drop-list">
                                 <option>Оберіть з переліку</option>
                                 <option>Відсоток від суми</option>
-                                <option>ЗФіксована значення</option>
+                                <option>Фіксована значення</option>
                             </select>
                         </div>
                     </div>
