--- a/rate.html
+++ b/rate.html
@@ -232,6 +232,7 @@
                         <label class="form-label-title" for="name"><span class="note">*</span>Рахунок банку одержувача платежу</label>
                         <div class="box-textarea">
                             <select class="drop-list">
+                                <option>Оберіть з переліку</option>
                                 <option>Рахунок у ПриватБанку</option>
                                 <option>Рахунок у сторонньому банку</option>
                                 <option>Рахунок у будь-якому банку</option>
