--- a/index.html
+++ b/index.html
@@ -63,13 +63,16 @@
             <th>Опис тарифу</th>
             <th>Назва продукту</th>
             <th>Назва послуги</th>
+            <th>Тарифний план / пакет</th>
             <th>Платник комісії</th>
             <th>База нарахування комісії</th>
             <th>Тип комісії</th>
             <th>Валюта операції</th>
             <th>Канал проведення операції</th>
             <th>Значення тарифу</th>
-            <th>Статус тарифу</th>
+            <!-- <th>Статус тарифу</th> -->
+            <th>Посилання на документ</th>          
+            <th>Дата затвердження КО</th>
             <th>
               <a href="" class="add-rate-link">
                 <svg class="icon-add-square" width="32px" height="32px">
@@ -83,52 +86,131 @@
           <tr>
             <td>1</td>
             <td>
-              <a href="" class="prodact-link">Комісія за поповнення Картки для виплат з індивідуальним дизайном безготівковим платежем від третіх осіб без її
-              наявності</a>
+              <a href="" class="prodact-link">Внесення торгової виручки. Стандартні тарифи</a>
             </td>
-            <td>Картка для Виплат/Картка для Виплат GOLD</td>
-            <td>Картки для виплат з індивідуальним дизайном</td>
-            <td>Власник карти/рахунку/скриньки</td>
+            <td>Прийом грошової виручки від суб'єктів господарювання</td>
+            <td>Прийом грошової виручки від суб'єктів господарювання</td>
+            <td>Стандартний</td>
+            <td>Платник (будь-який клієнт)</td>
             <td>За транзакцію/платіж</td>
             <td>Відсоток від суми</td>
             <td>UAH</td>
-            <td>Каса / відділення</td>
-            <td>0,5</td>
-            <td>Діючий</td>
+            <td>Каса</td>
+            <td>0,10</td>
+            <!-- <td>Діючий</td> -->
+            <td>
+              <a href="" class="prodact-link">7276003</a>
+            </td>
+            <td>27.07.2022</td>
             <td></td>
           </tr>
+
           <tr>
             <td>2</td>
+            <td>
+              <a href="" class="prodact-link">Внесення торгової виручки. Стандартні тарифи</a>
+            </td>
+            <td>Прийом грошової виручки від суб'єктів господарювання</td>
+            <td>Прийом грошової виручки від суб'єктів господарювання</td>
+            <td>Стандартний</td>
+            <td>Платник (будь-який клієнт)</td>
+            <td>За транзакцію/платіж</td>
+            <td>Відсоток від суми</td>
+            <td>UAH</td>
+            <td>ТСО</td>
+            <td>0,05</td>
+            <!-- <td>Діючий</td> -->
+            <td>
+              <a href="" class="prodact-link">7276003</a>
+            </td>
+            <td>27.07.2022</td>
+            <td></td>
+          </tr>
+
+
+            <td>3</td>
+            <td>
+              <a href="" class="prodact-link">Внесення торгової виручки. Тарифний пакет “Бізнес Старт”</a>
+            </td>
+            <td>Прийом грошової виручки від суб'єктів господарювання</td>
+            <td>Прийом грошової виручки від суб'єктів господарювання</td>
+            <td>Бізнес Старт</td>
+            <td>Платник (будь-який клієнт)</td>
+            <td>За транзакцію/платіж</td>
+            <td>Відсоток від суми</td>
+            <td>UAH</td>
+            <td>Каса</td>
+            <td>0,10</td>
+            <!-- <td>Діючий</td> -->
+            <td>
+              <a href="" class="prodact-link">7276003</a>
+            </td>
+            <td>27.07.2022</td>
+            <td></td>
+            </tr>
+            
+            <tr>
+              <td>4</td>
+              <td>
+                <a href="" class="prodact-link">Внесення торгової виручки. Тарифний пакет “Бізнес Старт”</a>
+              </td>
+              <td>Прийом грошової виручки від суб'єктів господарювання</td>
+              <td>Прийом грошової виручки від суб'єктів господарювання</td>
+              <td>Бізнес Старт</td>
+              <td>Платник (будь-який клієнт)</td>
+              <td>За транзакцію/платіж</td>
+              <td>Відсоток від суми</td>
+              <td>UAH</td>
+              <td>ТСО</td>
+              <td>0,05</td>
+              <!-- <td>Діючий</td> -->
+              <td>
+                <a href="" class="prodact-link">7276003</a>
+              </td>
+              <td>27.07.2022</td>
+              <td></td>
+            </tr>
+
+
+          <tr>
+            <td>5</td>
             <td>
               <a href="" class="prodact-link">Комісія за розрахункове обслуговування неактивного рахунку по продукту</a>
             </td>
             <td>Преміальні картки</td>
             <td>Platinum</td>
+            <td>---</td>
             <td>Власник карти/рахунку/скриньки</td>
             <td>За рахунок/карту/довідку</td>
             <td>Фіксована значення</td>
             <td>UAH</td>
-            <td>Автоматично</td>
+            <td>Безакцептне списання/нарахування</td>
             <td>20</td>
-            <td>Діючий</td>
+            <!-- <td>Діючий</td> -->
+            <td>
+              <a href="" class="prodact-link">7492399</a>
+            </td>
+            <td>15.09.2022</td>
             <td></td>
           </tr>
           <tr>
-            <td>3</td>
+            <!-- <td>6</td>
             <td>
               <a href="" class="prodact-link">Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку з гривневих карток</a>
             </td>
             <td>Термінові грошові перекази</td>
-            <td>Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку</td>           
+            <td>Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку</td>
+            <td>---</td>
             <td>Платник</td>
             <td>Сума переказу</td>
             <td>Відсоток від суми</td>
             <td>UAH</td>
             <td>Каса / відділення</td>
             <td>4,00</td>
-            <td>Діючий</td>
+            <td>7492399</td>
+            <td>15.09.2022</td>
             <td></td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </section>
