--- a/rate.html
+++ b/rate.html
@@ -414,7 +414,7 @@
                             <br>
                             <label class="checkbox-channel">
                                 <input type="checkbox" name="channel" value="HTML">
-                                Автоматично
+                                Безакцептне списання/нарахування
                             </label>
                         </div>
                     </div>
@@ -555,15 +555,15 @@
 
                 <!-- Для каталога продуктов -->
 
-                <!-- <div class="box">
+                <div class="box">
                     <div class="form-field">
                         <label class="form-label-title" for="name">Тарифи</label>
                         <div class="box-textarea-last">
-                            <a href="" class="prodact-link">Перелік тарифів по продукту</a>
+                            <a href="" class="prodact-link">Перелік тарифів по основному продукту</a>
                         </div>
                     </div>
-                
-                </div> -->
+            
+                </div>
 
                 <!-- <div class="box">
                     <div class="form-field">
