--- a/rate.html
+++ b/rate.html
@@ -204,6 +204,7 @@
                                 <option>Фіз особа</option>
                                 <option>Юр особа</option>
                                 <option>ФОП</option>
+                                <option>Будь-який клієнт</option>
                             </select>
                         </div>
                     </div>
@@ -555,7 +556,7 @@
 
                 <!-- Для каталога продуктов -->
 
-                <div class="box">
+                <!-- <div class="box">
                     <div class="form-field">
                         <label class="form-label-title" for="name">Тарифи</label>
                         <div class="box-textarea-last">
@@ -563,7 +564,7 @@
                         </div>
                     </div>
             
-                </div>
+                </div> -->
 
                 <!-- <div class="box">
                     <div class="form-field">
