--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
             <th>Валюта операції</th>
             <th>Канал проведення операції</th>
             <th>Значення тарифу</th>
+            <th>Мін сума комісії</th>
+            <th>Макс сума комісії</th>
             <!-- <th>Статус тарифу</th> -->
-            <th>Посилання на документ</th>          
+            <th>Посилання на документ</th>
             <th>Дата затвердження КО</th>
             <th>
               <a href="" class="add-rate-link">
@@ -97,6 +99,8 @@
             <td>UAH</td>
             <td>Каса</td>
             <td>0,10</td>
+            <td>30</td>
+            <td>-</td>
             <!-- <td>Діючий</td> -->
             <td>
               <a href="" class="prodact-link">7276003</a>
@@ -119,6 +123,8 @@
             <td>UAH</td>
             <td>ТСО</td>
             <td>0,05</td>
+            <td>10</td>
+            <td>-</td>
             <!-- <td>Діючий</td> -->
             <td>
               <a href="" class="prodact-link">7276003</a>
@@ -128,7 +134,31 @@
           </tr>
 
 
-            <td>3</td>
+          <td>3</td>
+          <td>
+            <a href="" class="prodact-link">Внесення торгової виручки. Тарифний пакет “Бізнес Старт”</a>
+          </td>
+          <td>Прийом грошової виручки від суб'єктів господарювання</td>
+          <td>Прийом грошової виручки від суб'єктів господарювання</td>
+          <td>Бізнес Старт</td>
+          <td>Платник (будь-який клієнт)</td>
+          <td>За транзакцію/платіж</td>
+          <td>Відсоток від суми</td>
+          <td>UAH</td>
+          <td>Каса</td>
+          <td>0,10</td>
+          <td>10</td>
+          <td>-</td>
+          <!-- <td>Діючий</td> -->
+          <td>
+            <a href="" class="prodact-link">7276003</a>
+          </td>
+          <td>27.07.2022</td>
+          <td></td>
+          </tr>
+
+          <tr>
+            <td>4</td>
             <td>
               <a href="" class="prodact-link">Внесення торгової виручки. Тарифний пакет “Бізнес Старт”</a>
             </td>
@@ -139,37 +169,17 @@
             <td>За транзакцію/платіж</td>
             <td>Відсоток від суми</td>
             <td>UAH</td>
-            <td>Каса</td>
-            <td>0,10</td>
+            <td>ТСО</td>
+            <td>0,05</td>
+            <td>5</td>
+            <td>-</td>
             <!-- <td>Діючий</td> -->
             <td>
               <a href="" class="prodact-link">7276003</a>
             </td>
             <td>27.07.2022</td>
             <td></td>
-            </tr>
-            
-            <tr>
-              <td>4</td>
-              <td>
-                <a href="" class="prodact-link">Внесення торгової виручки. Тарифний пакет “Бізнес Старт”</a>
-              </td>
-              <td>Прийом грошової виручки від суб'єктів господарювання</td>
-              <td>Прийом грошової виручки від суб'єктів господарювання</td>
-              <td>Бізнес Старт</td>
-              <td>Платник (будь-який клієнт)</td>
-              <td>За транзакцію/платіж</td>
-              <td>Відсоток від суми</td>
-              <td>UAH</td>
-              <td>ТСО</td>
-              <td>0,05</td>
-              <!-- <td>Діючий</td> -->
-              <td>
-                <a href="" class="prodact-link">7276003</a>
-              </td>
-              <td>27.07.2022</td>
-              <td></td>
-            </tr>
+          </tr>
 
 
           <tr>
@@ -179,13 +189,15 @@
             </td>
             <td>Преміальні картки</td>
             <td>Platinum</td>
-            <td>---</td>
+            <td>-</td>
             <td>Власник карти/рахунку/скриньки</td>
             <td>За рахунок/карту/довідку</td>
-            <td>Фіксована значення</td>
+            <td>Фіксоване значення</td>
             <td>UAH</td>
             <td>Безакцептне списання/нарахування</td>
             <td>20</td>
+            <td>-</td>
+            <td>-</td>
             <!-- <td>Діючий</td> -->
             <td>
               <a href="" class="prodact-link">7492399</a>
@@ -195,22 +207,22 @@
           </tr>
           <tr>
             <!-- <td>6</td>
-            <td>
-              <a href="" class="prodact-link">Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку з гривневих карток</a>
-            </td>
-            <td>Термінові грошові перекази</td>
-            <td>Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку</td>
-            <td>---</td>
-            <td>Платник</td>
-            <td>Сума переказу</td>
-            <td>Відсоток від суми</td>
-            <td>UAH</td>
-            <td>Каса / відділення</td>
-            <td>4,00</td>
-            <td>7492399</td>
-            <td>15.09.2022</td>
-            <td></td>
-          </tr> -->
+                <td>
+                  <a href="" class="prodact-link">Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку з гривневих карток</a>
+                </td>
+                <td>Термінові грошові перекази</td>
+                <td>Комісія на відправку переказів P2P на міжнародні картки в сервісах ПриватБанку</td>
+                <td>---</td>
+                <td>Платник</td>
+                <td>Сума переказу</td>
+                <td>Відсоток від суми</td>
+                <td>UAH</td>
+                <td>Каса / відділення</td>
+                <td>4,00</td>
+                <td>7492399</td>
+                <td>15.09.2022</td>
+                <td></td>
+              </tr> -->
         </tbody>
       </table>
     </section>
