--- a/rate.html
+++ b/rate.html
@@ -160,6 +160,14 @@
                     </div>
 
                     <div class="form-field">
+                        <label class="form-label-title" for="name">Абревіатура тарифу в ОДБ</label>
+                        <div class="box-textarea">
+                            <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
+                                placeholder="Абревіатура тарифу в ОДБ"></textarea>
+                        </div>
+                    </div>
+
+                    <div class="form-field">
                         <label class="form-label-title" for="name"><span class="note">*</span>Тип тарифа</label>
                         <div class="box-textarea">
                             <select class="drop-list-type" data-action="type-select">
@@ -185,6 +193,14 @@
                         <div class="box-textarea">
                             <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
                                 placeholder="Тарифний план / пакет"></textarea>
+                        </div>
+                    </div>
+                    
+                    <div class="form-field">
+                        <label class="form-label-title" for="name">Код тарифного пакета</label>
+                        <div class="box-textarea">
+                            <textarea class="form-textarea" name="name" rows="1" style="height: 31px" id="name"
+                                placeholder="Код тарифного пакета"></textarea>
                         </div>
                     </div>
 
